Shuffle working properly

--- a/chartqa-backend/.env
+++ b/chartqa-backend/.env
@@ -4,5 +4,5 @@
 
 
 PORT=5000
-MONGODB_URI=mongodb+srv://chartqaUser:vischart52@chartqavis.h3mq9x0.mongodb.net/?retryWrites=true&w=majority&appName=chartqaVis
+MONGODB_URI=mongodb+srv://vislab2025:xvqt3Ce8O5hlxHkz@cluster0.erxfyhi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_NAME=chartqa
